adjusted item cell spacing

--- a/Homepwner/Base.lproj/Main.storyboard
+++ b/Homepwner/Base.lproj/Main.storyboard
@@ -79,6 +79,7 @@
                                         <constraint firstItem="pDV-eI-Jim" firstAttribute="bottom" secondItem="4OV-kU-szu" secondAttribute="bottomMargin" id="4Tu-wC-YvC"/>
                                         <constraint firstItem="pDV-eI-Jim" firstAttribute="leading" secondItem="Wqj-h1-Xxi" secondAttribute="leading" id="GO3-Bw-imB"/>
                                         <constraint firstItem="Wqj-h1-Xxi" firstAttribute="leading" secondItem="4OV-kU-szu" secondAttribute="leadingMargin" id="N9d-WK-Xzh"/>
+                                        <constraint firstItem="pDV-eI-Jim" firstAttribute="top" secondItem="Wqj-h1-Xxi" secondAttribute="bottom" constant="12.5" id="aLl-fM-7tG"/>
                                         <constraint firstAttribute="trailingMargin" secondItem="4o2-yH-9fn" secondAttribute="trailing" id="d14-5g-Cbn"/>
                                         <constraint firstItem="4o2-yH-9fn" firstAttribute="centerY" secondItem="4OV-kU-szu" secondAttribute="centerY" id="gcT-BB-eKS"/>
                                     </constraints>
