--- a/Homepwner/Base.lproj/Main.storyboard
+++ b/Homepwner/Base.lproj/Main.storyboard
@@ -116,7 +116,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="VsS-5P-tqk">
-                                <rect key="frame" x="16" y="12" width="343" height="647"/>
+                                <rect key="frame" x="16" y="56" width="343" height="603"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="9Gv-cP-iyu">
                                         <rect key="frame" x="0.0" y="0.0" width="343" height="30"/>
@@ -179,7 +179,7 @@
                                         </subviews>
                                     </stackView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="249" text="Date Created" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="V8V-QO-5sm">
-                                        <rect key="frame" x="0.0" y="114" width="343" height="533"/>
+                                        <rect key="frame" x="0.0" y="114" width="343" height="489"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
@@ -192,12 +192,16 @@
                             </stackView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <gestureRecognizers/>
                         <constraints>
                             <constraint firstItem="5Js-jN-eU1" firstAttribute="bottom" secondItem="VsS-5P-tqk" secondAttribute="top" constant="8" id="7lQ-k7-LHq" userLabel="Top Layout Guide.bottom = Stack View.top + 8"/>
                             <constraint firstItem="VsS-5P-tqk" firstAttribute="leading" secondItem="IYa-f1-rfj" secondAttribute="leadingMargin" id="SLY-0Z-Kff"/>
                             <constraint firstItem="XOf-W3-KUD" firstAttribute="top" secondItem="VsS-5P-tqk" secondAttribute="bottom" constant="8" id="V0f-x1-Rca"/>
                             <constraint firstAttribute="trailingMargin" secondItem="VsS-5P-tqk" secondAttribute="trailing" id="e4w-Nf-MoN"/>
                         </constraints>
+                        <connections>
+                            <outletCollection property="gestureRecognizers" destination="6fY-bw-iGq" appends="YES" id="hvu-1b-e67"/>
+                        </connections>
                     </view>
                     <connections>
                         <outlet property="dateLabel" destination="V8V-QO-5sm" id="XXC-WY-sJU"/>
@@ -207,6 +211,11 @@
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="cWo-ad-u4P" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <tapGestureRecognizer id="6fY-bw-iGq">
+                    <connections>
+                        <action selector="backgroundTapped:" destination="GOD-jc-vjI" id="KXg-TK-Vld"/>
+                    </connections>
+                </tapGestureRecognizer>
             </objects>
             <point key="canvasLocation" x="1834.4000000000001" y="54.422788605697157"/>
         </scene>
