--- a/Homepwner/Base.lproj/Main.storyboard
+++ b/Homepwner/Base.lproj/Main.storyboard
@@ -10,7 +10,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Items View Controller-->
+        <!--Homepwner-->
         <scene sceneID="tva-l6-voj">
             <objects>
                 <tableViewController id="nja-Ha-N38" customClass="ItemsViewController" customModule="Homepwner" customModuleProvider="target" sceneMemberID="viewController">
@@ -97,7 +97,7 @@
                             <outlet property="delegate" destination="nja-Ha-N38" id="mp2-Sj-p6E"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" id="SUW-HA-BKj"/>
+                    <navigationItem key="navigationItem" title="Homepwner" id="SUW-HA-BKj"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="jmF-Z5-XSU" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
