--- a/Homepwner/Base.lproj/Main.storyboard
+++ b/Homepwner/Base.lproj/Main.storyboard
@@ -98,7 +98,7 @@
                                 <rect key="frame" x="16" y="72" width="343" height="543"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="VsS-5P-tqk">
-                                        <rect key="frame" x="0.0" y="0.0" width="343" height="543"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="343" height="186.5"/>
                                         <subviews>
                                             <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="9Gv-cP-iyu">
                                                 <rect key="frame" x="0.0" y="0.0" width="343" height="30"/>
@@ -187,9 +187,6 @@
                                                     </barButtonItem>
                                                 </items>
                                             </toolbar>
-                                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="248" verticalCompressionResistancePriority="749" translatesAutoresizingMaskIntoConstraints="NO" id="gWP-bG-duK">
-                                                <rect key="frame" x="0.0" y="194.5" width="343" height="348.5"/>
-                                            </imageView>
                                         </subviews>
                                         <constraints>
                                             <constraint firstAttribute="bottom" secondItem="KWh-oW-GZX" secondAttribute="bottom" id="nuK-D9-o88"/>
@@ -197,7 +194,11 @@
                                             <constraint firstAttribute="trailing" secondItem="KWh-oW-GZX" secondAttribute="trailing" id="zzO-e6-NyU"/>
                                         </constraints>
                                     </stackView>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="248" verticalCompressionResistancePriority="749" translatesAutoresizingMaskIntoConstraints="NO" id="gWP-bG-duK">
+                                        <rect key="frame" x="0.0" y="194.5" width="343" height="348.5"/>
+                                    </imageView>
                                 </subviews>
+                                <variation key="heightClass=compact" axis="horizontal" distribution="fillEqually"/>
                             </stackView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
